--- a/source/nginx/conf.d/default.conf
+++ b/source/nginx/conf.d/default.conf
@@ -5,7 +5,7 @@ server {
          # Add index.php to the list if you are using PHP
          index index.html index.htm index.nginx-debian.html index.php;
          charset utf-8;
-         server_name zhangdetalk.com www.zhangdetalk.com localhost;
+         server_name localhost;
 
          location ~ \.md$ {
              default_type 'text/plain';
